<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/txt_owner_explaination"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/str_owner_explaination"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_manager_explaination"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/str_manager_explaination"
        app:layout_constraintEnd_toEndOf="@+id/txt_owner_explaination"
        app:layout_constraintStart_toStartOf="@+id/txt_owner_explaination"
        app:layout_constraintTop_toBottomOf="@+id/txt_owner_explaination" />

    <TextView
        android:id="@+id/txt_player_explaination"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/str_player_explaination"
        app:layout_constraintEnd_toEndOf="@+id/txt_manager_explaination"
        app:layout_constraintStart_toStartOf="@+id/txt_manager_explaination"
        app:layout_constraintTop_toBottomOf="@+id/txt_manager_explaination" />
</android.support.constraint.ConstraintLayout>